<resources>
    <string name="app_name">Android-Tittle-Tattle</string>
    <string name="all_start">Start</string>
    <string name="all_fixedpool">fixed_pool</string>
    <string name="all_cached_pool">cached_pool</string>
    <string name="all_single_thread">Single_Thread</string>
    <string name="all_scheduled_thread">Scheduled_Thread</string>
    <string name="all_student_id">Student ID</string>
    <string name="all_student_name">Student Name</string>
    <string name="all_student_province">Student Provice</string>
    <string name="all_add">Add</string>
    <string name="all_delete">Delete</string>
    <string name="all_update">Update</string>
    <string name="all_query">Query</string>
    <string name="all_count">Count</string>
    <string name="all_data_count">共计：%1$d条</string>

</resources>
