<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp">

    <!--Id-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_input_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_sql_input_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/all_student_id"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <!--Name-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_input_id">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_sql_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/all_student_name"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <!--Country-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_input_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_input_name">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_sql_input_province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/all_student_province"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/layout_sql_operation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/layout_input_country">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <!--Add-->
            <Button
                android:id="@+id/btn_sql_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_add" />

            <!--delete-->
            <Button
                android:id="@+id/btn_sql_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/all_delete" />

            <!--modify-->
            <Button
                android:id="@+id/btn_sql_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_update" />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <!--Query-->
            <Button
                android:id="@+id/btn_sql_query"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_query" />

            <!--count-->
            <Button
                android:id="@+id/btn_sql_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/all_count" />

        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/tv_sql_data_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/all_data_count"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/layout_sql_operation" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_original_sql"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_sql_data_count" />

</android.support.constraint.ConstraintLayout>